[package]
name = "swim-consistent-hashing-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# gossipod = { git = "github.com/TheDhejavu/gossipod" }
gossipod = { path = "../../gossipod" }
hash_ring = "0.2"
env_logger = "0.11.5"
async-trait = "0.1.81"
clap = { version = "4.3", features = ["derive"] }
anyhow = { version = "1.0.56", features = ["backtrace"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
log = "0.4"
hashring = "0.3.6"
